--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
     </div>
   </section>
 
+  </section>
+
+<div class="more-features">
+  <a href="allfeatures.html" class="secondary-btn">See All Features</a>
+</div>
+
   <section class="buy-now">
     <h2 class="section-title">Ready to Get Started?</h2>
     <a href="#" class="neon-btn">Buy Now</a>
