--- a/allfeatures.html
+++ b/allfeatures.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>All Features – Onyx UI</title>
+  <title>All Features – Onyx UII</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
     /* Bring the section higher up */
