--- a/allfeatures.html
+++ b/allfeatures.html
@@ -11,7 +11,6 @@
       padding: 0;
     }
 
-    /* Use flow-root to prevent margin collapse */
     .all-features {
       display: flow-root;
       padding-top: 0.05px;
@@ -48,36 +47,142 @@
 <body>
   <header class="hero">
     <h1 class="neon-title">OnyxUI</h1>
-    <p class="subtitle">Explore Every Power Unleashed</p>
+    <p class="subtitle">Explore Every Mod Before Spending Anything.</p>
   </header>
 
   <!-- All features list begins right below -->
   <section class="all-features">
     <div class="category">
+      <h3>Main-Menu</h3>
+      <ul class="feature-list">
+        <li class="glow-text">Settings</li>
+        <li class="glow-text">Movement</li>
+        <li class="glow-text">Visual</li>
+        <li class="glow-text">Player</li>
+        <li class="glow-text">World</li>
+        <li class="glow-text">Exploits</li>
+        <li class="glow-text">Safety</li>
+        <li class="glow-text">MusicPlayer</li>
+        <li class="glow-text">FloatlyMode</li>
+        <li class="glow-text">Overlay</li>
+        <li class="glow-text">Notifacations</li>
+      </ul>
+    </div>
+
+    <div class="category">
+      <h3>Settings</h3>
+      <ul class="feature-list">
+        <li class="glow-text">Menu Settings (Tab)</li>
+        <li class="glow-text">Mod Settings (Tab)</li>
+        <li class="glow-text">Menu Color Settings (Tab in Menu Settings Tab)</li>
+        <li class="glow-text">Movement Settings (Tab in Mod Settings Tab)</li>
+        <li class="glow-text">Visual Settings (Tab in Mod Settings Tab)</li>
+        <li class="glow-text">World Settings (Tab in Mod Settings Tab)</li>
+      </ul>
+    </div>
+
+    <div class="category">
+      <h3>Movement</h3>
+      <ul class="feature-list">
+        <li class="glow-text">ExcelFly</li>
+        <li class="glow-text">Fly [C]</li>
+        <li class="glow-text">Speed (Tab)</li>
+        <li class="glow-text">LongArms (Adjustable)</li>
+        <li class="glow-text">NoTagFreeze</li>
+        <li class="glow-text">PSA [C]</li>
+        <li class="glow-text">Platforms</li>
+        <li class="glow-text">NoClip</li>
+        <li class="glow-text">BouncyHands</li>
+      </ul>
+    </div>
+
+    <div class="category">
+      <h3>Visual</h3>
+      <ul class="feature-list">
+        <li class="glow-text">Chams [C]</li>
+        <li class="glow-text">Box (ESP) [C]</li>
+        <li class="glow-text">Beacons [C]</li>
+        <li class="glow-text">Tracers [C]</li>
+        <li class="glow-text">Sky (Tab)</li>
+        <li class="glow-text">WhyIsEveryoneLookingAtMe (Inspo: Colossus)</li>
+        <li class="glow-text">CS Visuals (Tab)</li>
+      </ul>
+    </div>
+
+    <div class="category">
       <h3>Player</h3>
       <ul class="feature-list">
-        <li class="glow-text">Ultra Fast performance</li>
-        <li class="glow-text">Customizable UI & layout</li>
-        <li class="glow-text">Hotkey Bindings</li>
+        <li class="glow-text">GhostMonkey</li>
+        <li class="glow-text">InvisMonkey</li>
+        <li class="glow-text">StrobeMonkey</li>
+        <li class="glow-text">Tag All</li>
+        <li class="glow-text">Tag Gun</li>
+        <li class="glow-text">UnTag All</li>
+        <li class="glow-text">GiveAllCosmetics</li>
+        <li class="glow-text">SpazCosmetics</li>
+        <li class="glow-text">Reset RPCS</li>
+        <li class="glow-text">NetworkPlayer Body</li>
       </ul>
     </div>
 
     <div class="category">
-      <h3>Mods</h3>
+      <h3>World</h3>
       <ul class="feature-list">
-        <li class="glow-text">ESP System (see through walls)</li>
-        <li class="glow-text">Aimbot with smoothness control</li>
-        <li class="glow-text">Skin Changer for characters & weapons</li>
-        <li class="glow-text">Script Hub (community scripts)</li>
-        <li class="glow-text">Chat‑based mod commands</li>
+        <li class="glow-text">Disconnect</li>
+        <li class="glow-text">JoinPublic</li>
+        <li class="glow-text">JoinRandomPrivate</li>
+        <li class="glow-text">SpawnNetworkPlayers [C]</li>
+        <li class="glow-text">SpawnStickableTargets</li>
+        <li class="glow-text">SpawnCubes</li>
+        <li class="glow-text">SpawnPurpleObjects</li>
+        <li class="glow-text">ClearObjects</li>
+        <li class="glow-text">FullBright</li>
+        <li class="glow-text">DisableQuitBox</li>
+        <li class="glow-text">Gravity (Tab)</li>
+        <li class="glow-text">Sound (Tab)</li>
       </ul>
     </div>
 
     <div class="category">
-      <h3>Music</h3>
+      <h3>Exploits</h3>
       <ul class="feature-list">
-        <li class="glow-text">Server‑side Music Player</li>
-        <li class="glow-text">Play custom tracks for everyone</li>
+        <li class="glow-text">Anti ModCheck</li>
+        <li class="glow-text">Trap Stump</li>
+        <li class="glow-text">Disable NetworkTriggers [C]</li>
+        <li class="glow-text">Slow All</li>
+        <li class="glow-text">Vibrate All</li>
+        <li class="glow-text">Annoy All</li>
+        <li class="glow-text">Spaz GameModes</li>
+        <li class="glow-text">CloseRoom</li>
+        <li class="glow-text">Crash All</li>
+        <li class="glow-text">Lag All</li>
+        <li class="glow-text">Freeze All</li>
+        <li class="glow-text">KickOthersInGroup</li>
+        <li class="glow-text">Break NameTags</li>
+        <li class="glow-text">ScreenTear All</li>
+        <li class="glow-text">TooManyPlayers (Inpso: iiDk)</li>
+      </ul>
+    </div>
+
+    <div class="category">
+      <h3>Safety</h3>
+      <ul class="feature-list">
+        <li class="glow-text">Spoof Account</li>
+        <li class="glow-text">Hide Hands</li>
+        <li class="glow-text">Anti Report</li>
+        <li class="glow-text">Anti Crash</li>
+      </ul>
+    </div>
+
+    <div class="category">
+      <h3>MusicPlayer</h3>
+      <ul class="feature-list">
+        <li class="glow-text">Music (Select Music To Play)</li>
+        <li class="glow-text">Play Music</li>
+        <li class="glow-text">Stop Music</li>
+        <li class="glow-text">Loop Music</li>
+        <li class="glow-text">Sound Board</li>
+        <li class="glow-text">Volume (Adjust Volume)</li>
       </ul>
     </div>
   </section>
