--- a/allfeatures.html
+++ b/allfeatures.html
@@ -104,6 +104,9 @@
         <li class="glow-text">Beacons [C]</li>
         <li class="glow-text">Tracers [C]</li>
         <li class="glow-text">Sky (Tab)</li>
+        <li class="glow-text">Set Sunrise (In Sky Tab)</li>
+        <li class="glow-text">Set Daytime (In Sky Tab)</li>
+        <li class="glow-text">Set Nighttime (In Sky Tab)</li>
         <li class="glow-text">WhyIsEveryoneLookingAtMe (Inspo: Colossus)</li>
         <li class="glow-text">CS Visuals (Tab)</li>
       </ul>
