--- a/allfeatures.html
+++ b/allfeatures.html
@@ -50,7 +50,6 @@
     <p class="subtitle">Explore Every Mod Before Spending Anything.</p>
   </header>
 
-  <!-- All features list begins right below -->
   <section class="all-features">
     <div class="category">
       <h3>Main-Menu</h3>
@@ -87,6 +86,11 @@
         <li class="glow-text">ExcelFly</li>
         <li class="glow-text">Fly [C]</li>
         <li class="glow-text">Speed (Tab)</li>
+        <li class="glow-text">Speed (Average Boost) (In Speed Tab)</li>
+        <li class="glow-text">Speed (Medium) (In Speed Tab)</li>
+        <li class="glow-text">Speed (Blatant) (In Speed Tab)</li>
+        <li class="glow-text">Speed [RG] (Medium) (In Speed Tab)</li>
+        <li class="glow-text">Speed [LG] (Medium) (In Speed Tab)</li>
         <li class="glow-text">LongArms (Adjustable)</li>
         <li class="glow-text">NoTagFreeze</li>
         <li class="glow-text">PSA [C]</li>
@@ -104,11 +108,13 @@
         <li class="glow-text">Beacons [C]</li>
         <li class="glow-text">Tracers [C]</li>
         <li class="glow-text">Sky (Tab)</li>
-        <li class="glow-text">Set Sunrise (In Sky Tab)</li>
-        <li class="glow-text">Set Daytime (In Sky Tab)</li>
-        <li class="glow-text">Set Nighttime (In Sky Tab)</li>
+        <li class="glow-text">SetTimeOfDay (Sunrise) (In Sky Tab)</li>
+        <li class="glow-text">SetTimeOfDay (Day) (In Sky Tab)</li>
+        <li class="glow-text">SetTimeOfDay (Night) (In Sky Tab)</li>
         <li class="glow-text">WhyIsEveryoneLookingAtMe (Inspo: Colossus)</li>
         <li class="glow-text">CS Visuals (Tab)</li>
+        <li class="glow-text">EnableMirror (In CS Visuals Tab)</li>
+        <li class="glow-text">DisableMirror (In CS Visuals Tab)</li>
       </ul>
     </div>
 
@@ -142,7 +148,16 @@
         <li class="glow-text">FullBright</li>
         <li class="glow-text">DisableQuitBox</li>
         <li class="glow-text">Gravity (Tab)</li>
+        <li class="glow-text">HighGravity (In Gravity Tab)</li>
+        <li class="glow-text">LowGravity (In Gravity Tab)</li>
+        <li class="glow-text">NoGravity (In Gravity Tab)</li>
+        <li class="glow-text">FixGravity (In Gravity Tab)</li>
         <li class="glow-text">Sound (Tab)</li>
+        <li class="glow-text">Sound (Wood) (In Sound Tab)</li>
+        <li class="glow-text">Sound (Grass) (In Sound Tab)</li>
+        <li class="glow-text">Sound (Dirt) (In Sound Tab)</li>
+        <li class="glow-text">Sound (Rock) (In Sound Tab)</li>
+        <li class="glow-text">Sound (Metal) (In Sound Tab)</li>
       </ul>
     </div>
 
